# py-evmlistener

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: osx.yml  windows.yml
listener/: config.py  db.py  desktopnotif.py  evmlog.py  main.py  models.py  telegram.py  utils.py
