[tool.poetry]
name = "py-evmlistener"
version = "1.1"
description = "EVM event log listener deamon."
authors = ["Peerchemist <peerchemist@protonmail.ch>"]
readme = "README.md"
packages = [{ include = "listener" }]

[tool.poetry.dependencies]
python = ">=3.12.1,<3.13"
asyncio = "^3.4.3"
picologging = "^0.9.3"
aiosqlite = "^0.20.0"
aiohttp = "^3.9.5"
eth-utils = "^4.1.1"
eth-abi = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
listen = "listener.main:__main__"
