[tool.poetry]
name = "py-evmlistener"
version = "1.2"
description = "EVM event log listener deamon."
authors = ["Peerchemist <peerchemist@protonmail.ch>"]
packages = [{ include = "listener" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
asyncio = "^3.4.3"
aiosqlite = "^0.20.0"
aiohttp = "^3.9.5"
eth-utils = "^4.1.1"
eth-abi = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
listen = "listener.main:__main__"
